--- a/webapp/deploy.yml
+++ b/webapp/deploy.yml
@@ -14,7 +14,8 @@
       when: ansible_os_family == "RedHat"
     - name: Install Docker SDK for Python
       pip:
-        name: docker    
+        name: docker
+        executable: pip3
   tasks:
     - name: "Installation paquets git et wget"
       yum:
